c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_struct_declaration/void_member.c
struct s {
  // can't declare structure members with incomplete type, including void
  void x;
};